--- a/style.css
+++ b/style.css
@@ -53,8 +53,9 @@ body {
     color: white;
     font-size: 32px;
     text-align: center;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 20%;
+    margin-right: 20%;
     margin-top: 50px;
     padding: 10px;
+    white-space: pre-line;
 }
