--- a/style.css
+++ b/style.css
@@ -59,3 +59,34 @@ body {
     padding: 10px;
     white-space: pre-line;
 }
+
+.modal {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: rgb(0,0,0, 0.7);
+}
+
+.modal-content{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 350px;
+    height: 200px;
+    background-color: rgba(207, 207, 202);
+}
+
+.modal-btn{
+    background-color: rgb(95, 29, 29);
+    color: white;
+    font-weight: 800;
+    padding: 10px 20px;
+    border-radius: 10%;
+}
+
+
