--- a/style.css
+++ b/style.css
@@ -76,8 +76,9 @@ body {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    width: 350px;
-    height: 200px;
+    min-width: 350px;
+    min-height: 200px;
+    padding: 15px;
     background-color: rgba(207, 207, 202);
 }
 
