--- a/style.css
+++ b/style.css
@@ -60,6 +60,16 @@ body {
     white-space: pre-line;
 }
 
+.results-img{
+    display:flex;
+    justify-content: space-around;
+}
+.results img{
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+}
+
 .modal {
     display: none;
     justify-content: center;
